--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "ngBase64",
-    "version": "1.0.1",
+    "name": "angular-base64",
+    "version": "2.0.0",
     "author": "Ninjatronic",
     "description": "Base64 Conversion for AngularJS Apps",
     "contributors": [
@@ -14,7 +14,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/ninjatronic/ngBase64.git"
+        "url": "https://github.com/ninjatronic/angular-base64.git"
     },
     "devDependencies": {
         "grunt": "",
