add tape and basic tests for encode/decode

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "grunt-contrib-uglify": "",
     "grunt-notify": "",
     "grunt-strip": "",
-    "grunt-text-replace": ""
+    "grunt-text-replace": "",
+    "tape": "^4.6.3"
   },
   "name": "@ninjatronic/angular-base64",
   "description": "Encapsulation of Nick Galbreath's base64.js library for AngularJS",
